2020-06-07         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Revert changes of 26 April 2020. It causes
	the dfastress test to fail on some compilers.

2020-05-08         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync from GNULIB.

2020-04-26         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Speed improvements from Norihiro Tanaka <noritnk@kcn.ne.jp>,
	copied in from the bug-grep list.

2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.1.0: Release tar ball made.

2020-03-12         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Move local includes after system includes.
	Fixes z/OS build and is better practice anyway.

2020-03-06         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (libsupport_a_SOURCES): Add flexmember.h.

2020-03-06         Jannick               <thirdedition@gmx.net>

	* Makefile.am: Replace AM_MAKEFLAGS with AM_CFLAGS and AM_LDFLAGS.

2020-02-01         John E. Malmberg      <wb8tyw@qsl.net>

	* dfa.c: Remove OpenVMS specific code.  OpenVMS build
	will generate a stdint.h if needed.

2020-02-01         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Update from GNULIB. Should help Vax/VMS.
	* flexmember.h: New file, for dfa.c.

2020-01-28         Arnold D. Robbins     <arnold@skeeve.com>

	* regex_internal.h: Update from GNULIB. Hopefully fixes
	non-GCC issues.

2020-01-24         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.h, dfa.c: Update copyright years.
	* regex.c, regex_internal.h: Update from GNULIB.

2019-12-20         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.h, dfa.c: Updated from GNULIB.

2019-12-16         Arnold D. Robbins     <arnold@skeeve.com>

	* localeinfo.h, localeinfo.c: Updated from GNULIB.
	* dfa.c: Partial sync with GNULIB for localeinfo related stuff.

2019-12-13         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.h, dfa.c: Updated from GNULIB.

2019-11-21         Arnold D. Robbins     <arnold@skeeve.com>
