@@ -2465,7 +2465,7 @@ static int
 compare (const void *a, const void *b)
 {
   position const *p = a, *q = b;
-  return p->index < q->index ? -1 : p->index > q->index;
+  return (p->index > q->index) - (p->index < q->index);
 }
 
 static void
