@@ -1,3 +1,9 @@
+2020-07-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* cdefs.h, dfa.c, libc-config.h, localeinfo.c, localeinfo.h,
+	regcomp.c, regex.h, regex_internal.c, regexec.c,
+	verify.h: Sync from GNULIB. Mostly copyright updates.
+
 2020-06-07         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Revert changes of 26 April 2020. It causes
